--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.22.2",
     "mysql": "^2.16.0",
     "randomstring": "^1.1.5",
+    "url-parse": "^1.4.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {},
