--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@adonisjs/validator": "^5.0.3",
     "adonis-cache": "^0.3.2",
     "axios": "^0.18.0",
+    "concurrently": "^4.0.1",
     "dateformat": "^3.0.3",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
