--- a/docker/nginx/sites/node-https.template
+++ b/docker/nginx/sites/node-https.template
@@ -3,9 +3,9 @@
 server {
     listen 443 default_server http2;
 
-    #ssl on;
-    #ssl_certificate /etc/ssl/cert_chain.crt;
-    #ssl_certificate_key /etc/ssl/privkey1.key;
+    ssl on;
+    ssl_certificate /etc/ssl/cert_chain.crt;
+    ssl_certificate_key /etc/ssl/privkey1.key;
 
     location / {
         proxy_pass http://node:${WEB_REVERSE_PROXY_PORT};
