--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@adonisjs/cors": "^1.0.6",
     "@adonisjs/fold": "^4.0.8",
     "@adonisjs/framework": "^5.0.7",
+    "@adonisjs/http-logger": "^1.0.0",
     "@adonisjs/ignitor": "^2.0.6",
     "@adonisjs/lucid": "^5.0.4",
     "@adonisjs/mail": "^3.0.8",
