--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.1.0",
   "adonis-version": "4.1.0",
   "description": "The fullstack application boilerplate for Adonisjs",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "concurrently \"node server.js\" \"node ace run:scheduler\"",
     "test": "node ace test",
