--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,10 @@ HOST=127.0.0.1
 PORT=3333
 NODE_ENV=development
 APP_URL=http://${HOST}:${PORT}
-APP_FULL_URL=https://digitalcoop.com.ng
+APP_FULL_URL=https://landcrowdy.com.ng
 CACHE_VIEWS=false
 
 APP_KEY=
-
 DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
