--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ HOST=127.0.0.1
 PORT=3333
 NODE_ENV=development
 APP_URL=http://${HOST}:${PORT}
-APP_FULL_URL=https://landcrowdy.com.ng
+APP_FULL_URL=https://landcrowdy.ng
 CACHE_VIEWS=false
 
 APP_KEY=
